[tool.poetry]
name = "004-streamlit-text-summarization"
version = "0.1.0"
description = ""
authors = ["julio colomer <info@aiaccelera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
streamlit = "^1.37.0"
openai


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
